--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -49,30 +49,30 @@
           </div>
         -->
 
-        <div class="border p-1 mb-4">
-          <strong
-            ><i class="fas fa-exclamation-triangle mr-1" aria-hidden="true"></i
-            >Before we get started:</strong
-          ><br>
-          if you are feeling very hot, with nausea or vomiting, fast pulse,
-          weakness or dizziness, you may need medical help.
-          <a href="https://www.cdc.gov/disasters/extremeheat/warning.html"
-            >See a full list of symptoms of heat-related illness</a
-          >.
-        </div>
-
+          <div class="border p-1 mb-4">
+            <strong
+              ><i
+                class="fas fa-exclamation-triangle mr-1"
+                aria-hidden="true"
+              ></i
+              >Before we get started:</strong
+            ><br />
+            if you are feeling very hot, with nausea or vomiting, fast pulse,
+            weakness or dizziness, you may need medical help.
+            <a href="https://www.cdc.gov/disasters/extremeheat/warning.html"
+              >See a full list of symptoms of heat-related illness</a
+            >.
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <!--
   <div class="row no-gutters">
     <div class="col-12">
       <img src="img/hero_6.svg" style="width: 100%" />
     </div>
   </div>
-  -->
 
   <div class="row my-4">
     <!--left-hand sticky column-->
@@ -80,10 +80,9 @@
       <div class="sticky-top border p-2" style="z-index: 0">
         <p>
           Today's weather is:
-          <span id="hot" class="font-weight-bold p-1">HOT</span>.
-          <br>The current
-          temp is <span id="currentTemp">XX</span> and the forecast high is
-          <span id="maxTemp">YY</span> today.
+          <span id="hot" class="font-weight-bold p-1">HOT</span>. <br />The
+          current temp is <span id="currentTemp">XX</span> and the forecast high
+          is <span id="maxTemp">YY</span> today.
           <a href="https://forecast7.com/en/40d71n74d01/new-york/?unit=us"
             >Get a full weather forecast here</a
           >.
@@ -92,7 +91,7 @@
         <hr class="my-2" />
 
         <p>
-          The current air quality is: 
+          The current air quality is:
           <span id="aqimeaning" class="font-weight-bold p-1"
             >AQI interpretation</span
           >.
@@ -155,15 +154,14 @@
 
     <!-- main content column -->
     <div class="col-md-7 overflow-hidden fs-rg mr-auto" id="primary-content">
-
       <div id="start">
         <div class="col-md-6 mx-auto">
           <button
             class="btn btn btn-block btn-outline-secondary mx-auto py-2"
             onclick="runQuestions()"
           >
-            <i class="fas fa-arrow-circle-down mr-1" aria-hidden="true"></i
-            >Get started
+            <i class="fas fa-arrow-circle-down mr-1" aria-hidden="true"></i>Get
+            started
           </button>
         </div>
       </div>
