--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -243,3 +243,7 @@ $color-data-explorer: #0A408A;
 #primary-content h3 {
   padding-top: 20px;
 }
+
+.related-border {
+  border-top: 8px solid #008939;
+}
