Revise the related entries design

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -231,3 +231,7 @@ $color-data-explorer: #0A408A;
   background-repeat: no-repeat;
   background-position: 0 20px;
 }
+
+.related-border {
+  border-top: 8px solid #008939;
+}
