--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -274,11 +274,14 @@
   <div class="modal" tabindex="-1" role="dialog" id="wxModal">
     <div class='modal-dialog modal-lg modal-dialog-centered' role='document'>
         <div class='modal-content'>
-            <div class='modal-header'>
-                <h5 class='modal-title'>Weather modal 1</h5>
-            </div>
             <div class='modal-body'>
-                <p>Weather modal content here</p>
+              <p><span class="font-weight-bold">It's hot! The forecast high is <span id="forecasthigh" style="background-color:red;font-weight:bold;" class="p-1">XX</span></span>. Get resources on heat and health:
+                <ul>
+                  <li><a href={{ relURL "data-features/heat-syndrome" }}>Realtime heat illness</a></li>
+                  <li><a href={{ relURL "data-features/hvi" }}>The Heat Vulnerability Index</a></li>
+                  <li><a href={{ relURL "key-topics/climatehealth" }}>All Climate and Health data and resources</a> </li>
+                </ul>
+              </p>
             </div>
             <hr>
             <button type="button" class="btn btn-outline-primary close-dialog" data-dismiss="modal">Close</button>
@@ -286,6 +289,26 @@
     </div>
 </div>
 
+  <!-- Invisible button to trigger modal -->
+  <button id="openModalBtn2" type="button" class="btn btn-primary hide" data-toggle="modal" data-target="#aqiModal">Open Modal</button>
+
+<div class="modal" tabindex="-1" role="dialog" id="aqiModal">
+  <div class='modal-dialog modal-lg modal-dialog-centered' role='document'>
+      <div class='modal-content'>
+          <div class='modal-body'>
+              <p><span class="font-weight-bold">Today's air quality is <span id="aqimeaning" class="p-1">AQI interpretation</span></span>. Get data on air quality:
+                <ul>
+                  <li><a href={{ relURL "data-features/realtime-air-quality" }}>Realtime air quality</a></li>
+                  <li><a href={{ relURL "data-features/neighborhood-air-quality" }}>Your neighborhood's air quality</a></li>
+                  <li><a href={{ relURL "key-topics/airquality" }}>All Air Quality data and resources</a></li>
+                </ul>
+              </p>
+          </div>
+          <hr>
+          <button type="button" class="btn btn-outline-primary close-dialog" data-dismiss="modal">Close</button>
+      </div>
+  </div>
+</div>
 
 
 
@@ -305,18 +328,95 @@
 <script type="text/javascript" src="{{ $secureJS.RelPermalink }}" integrity="{{ $secureJS.Data.Integrity }}"></script>
 
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
-    // Select the button element
-    var button = document.getElementById('openModalBtn');
 
-    // Add an event listener to the button to handle the click event
+  function initialize() {
+    // Get weather API to retrieve forecast high
+    fetch('https://api.weatherapi.com/v1/forecast.json?key=0d4a042ad8ec468da7b135156231711&q=NYC&days=1&aqi=yes&alerts=no')
+      .then(response => {return response.json()})
+      .then(data => {
+      // console.log(data)
+      console.log('forecast high: ' + data.forecast.forecastday[0].day.maxtemp_f)
+
+      if (data.forecast.forecastday[0].day.maxtemp_f > 90) {
+          console.log('forecast max is: ' + data.forecast.forecastday[0].day.maxtemp_f)
+          fireHeatModal(data.forecast.forecastday[0].day.maxtemp_f)
+          document.getElementById('forecasthigh').innerHTML = data.forecast.forecastday[0].day.maxtemp_f + '°F'
+      } else {}
+
+    })
+
+    // get AQI API to retrieve forecast AQI
+    fetch('https://www.airnowapi.org/aq/observation/zipCode/current/?format=application/json&zipCode=10013&distance=25&API_KEY=B34C7BA1-26C7-4DD2-9B1C-AAFD7AF4F12F')
+    .then(response => {return response.json()})
+    .then(data => {
+      // console.log(data) 
+      var aqi1 = data[0].Category.Number
+      var aqi2 = data[1].Category.Number
+      var aqi
+
+      aqi1 >= aqi2 ? (aqi = aqi1) : (aqi = aqi2)
+
+      console.log('aqi: ' + aqi)
+
+      aqi > 2 ? fireAQmodal(aqi) : {}
+
+    });
+
+
+    // determine which modal to fire
+
+
+  };
+
+  function fireHeatModal(x) {
+      var button = document.getElementById('openModalBtn');
+      button.addEventListener('click', function() {
+          console.log('heat modal fired. forecast high: ' + x);
+      });
+  
+      button.click();
+
+  }
+
+  function fireAQmodal(aqi) {
+    var button = document.getElementById('openModalBtn2')
     button.addEventListener('click', function() {
-        console.log('Button was clicked!');
+      console.log('aq modal fired. aqi: ', aqi)
     });
 
-    // Simulate the button click
+    // style the AQI modal
+    var aqiMeaning = document.getElementById('aqimeaning')
+    var aqiInterpretation; 
+    if (aqi == '1') {
+      aqiInterpretation = 'Good'
+      aqiMeaning.style['background-color'] = '#00E400'
+    } else if (aqi == '2') {
+      aqiInterpretation = 'Moderate'
+      aqiMeaning.style['background-color'] = '#FFFF00'
+    } else if (aqi == '3') {
+      aqiInterpretation = 'Unhealthy for sensitive groups'
+      aqiMeaning.style['background-color'] = '#FF7E00'
+    } else if (aqi == '4') {
+      aqiInterpretation = 'Unhealthy'
+      aqiMeaning.style['background-color'] = '#FF0000'
+      aqiMeaning.style.color = 'white'
+    } else if (aqi == '5') {
+      aqiInterpretation = 'Very unhealthy'
+      aqiMeaning.style['background-color'] = '#993399'
+      aqiMeaning.style.color = 'white'
+    } else if (aqi == '6') {
+      aqiInterpretation = 'Hazardous'
+      aqiMeaning.style['background-color'] = '#7E0023'
+      aqiMeaning.style.color = 'white'
+    }
+    aqiMeaning.innerHTML = aqiInterpretation
+
     button.click();
-    });
+  }
+
+  // send it
+  initialize();
+
 
 </script>
 
