remove hero image, fix breadcrumbs

--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -6,10 +6,7 @@
       <nav aria-label="breadcrumb" class="mb-4">
         <ul class="breadcrumb">
           <li class="breadcrumb-item"><a href="#">Home</a></li>
-          <li class="breadcrumb-item"><a href="/key-topics/">Key Topics</a></li>
-          <li class="breadcrumb-item">
-            <a href="/key-topics/climatehealth/">Climate and Health</a>
-          </li>
+          <li class="breadcrumb-item"><a href="/data-features/">Data Features</a></li>
           <li class="breadcrumb-item active" aria-current="page">
             {{ .Title }}
           </li>
@@ -68,11 +65,13 @@
     </div>
   </div>
 
+  <!--
   <div class="row no-gutters">
     <div class="col-12">
       <img src="img/hero_6.svg" style="width: 100%" />
     </div>
   </div>
+  -->
 
   <div class="row my-4">
     <!--left-hand sticky column-->
