text revs & hero image size

--- a/themes/dohmh/layouts/data-features/cooling-info.html
+++ b/themes/dohmh/layouts/data-features/cooling-info.html
@@ -65,13 +65,12 @@
     </div>
   </div>
 
-  <!--
   <div class="row no-gutters">
-    <div class="col-12">
+    <div class="col-md-8 mx-auto">
       <img src="img/hero_6.svg" style="width: 100%" />
     </div>
   </div>
-  -->
+
 
   <div class="row my-4">
     <!--left-hand sticky column-->
