re-style tabs/pills

--- a/assets/scss/__portal-custom.scss
+++ b/assets/scss/__portal-custom.scss
@@ -1152,6 +1152,11 @@ th.tablehead {
     color: #484848;
 }
 
+.home-label-nc {
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
 .borderbox {
     box-shadow: 2px 5px 3px #bebebe;
     border: 1px solid #bebebe;
