--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -221,6 +221,21 @@
             max-height: 250px;
             overflow-y: scroll;
         }
+
+        .nav-pills .nav-link.active {
+            border: 0px!important;
+        }
+
+        .tab-border {
+            border-left: 1px solid #dee2e6 !important;
+            border-top: 1px solid #dee2e6 !important;
+            border-right: 1px solid #dee2e6 !important;
+        }
+
+        .nav-pills .nav-item:hover:not(.active) {
+            background-color: #fafafa;
+        }
+
     </style>
 
 
@@ -257,12 +272,12 @@
 
                 <div class="nav nav-pills device-md border-bottom" role="tablist">
 
-                    <a class="nav-item nav-link active fs-sm border" id="tab-btn-02-a" href="#tab-02-a" data-toggle="tab"
+                    <a class="nav-item nav-link active fs-sm tab-border" id="tab-btn-02-a" href="#tab-02-a" data-toggle="tab"
                         aria-controls="tab-02-a" aria-selected="true" role="tab">
                         <i class="fas fa-list fa-fw" aria-hidden="true"></i>Datasets
                     </a>
                 
-                    <a class="nav-item nav-link fs-sm border" id="tab-btn-02-b" href="#tab-02-b" data-toggle="tab"
+                    <a class="nav-item nav-link fs-sm tab-border" id="tab-btn-02-b" href="#tab-02-b" data-toggle="tab"
                         aria-controls="tab-02-b" aria-selected="false" role="tab">
                         <i class="fas fa-info-circle mr-1" aria-hidden="true"></i>About {{ lower .Title }}
                     </a>
@@ -331,29 +346,37 @@
             <!-- Nav buttons -->
             <div class="nav nav-pills bg-white device-xs border-bottom" role="tablist">
         
-                <a class="nav-item nav-link flex-fill" id="tab-btn-table" href="#tab-table" data-toggle="pill"
+                <a class="nav-item nav-link border" id="tab-btn-table" href="#tab-table" data-toggle="pill"
                    aria-controls="tab-table" aria-selected="false" role="tab" style="text-decoration:none">
                     <i class="fas fa-table mr-1" aria-hidden="true"></i>
-                    <div class="d-none d-lg-inline-block" aria-hidden="true">Table</div>
+                    <div class="d-none d-lg-inline-block">
+                        <span class="home-label-nc font-weight-bold ">Table</span>
+                    </div>
                 </a>
         
-                <a class="nav-item nav-link flex-fill" id="tab-btn-map" href="#tab-map" data-toggle="pill"
+                <a class="nav-item nav-link border" id="tab-btn-map" href="#tab-map" data-toggle="pill"
                    aria-controls="tab-map" aria-selected="false" role="tab" style="text-decoration:none">
                     <i class="fas fa-map-marker-alt fa-fw"></i>
-                    <div class="d-none d-lg-inline-block" aria-hidden="true">Map</div>
+                    <div class="d-none d-lg-inline-block">
+                        <span class="home-label-nc font-weight-bold ">Map</span>
+                    </div>
                 </a>
         
-                <a class="nav-item nav-link flex-fill" id="tab-btn-trend" href="#tab-trend" data-toggle="pill"
+                <a class="nav-item nav-link border" id="tab-btn-trend" href="#tab-trend" data-toggle="pill"
                    aria-controls="tab-trend" aria-selected="false" role="tab" style="text-decoration:none">
                     <i class="fas fa-chart-line fa-fw" aria-hidden="true"></i>
-                    <div class="d-none d-lg-inline-block">Trend</div>
+                    <div class="d-none d-lg-inline-block">
+                        <span class="home-label-nc font-weight-bold ">Trend</span>
+                    </div>
                 </a>
         
         
-                <a class="nav-item nav-link flex-fill" id="tab-btn-links" href="#tab-links" data-toggle="pill"
+                <a class="nav-item nav-link border" id="tab-btn-links" href="#tab-links" data-toggle="pill"
                    aria-controls="tab-links" aria-selected="false" aria-disabled="true" role="tab" style="text-decoration:none">
                    <i class="fas fa-project-diagram" aria-hidden="true"></i>
-                    <div class="d-none d-lg-inline-block">Correlate</div>
+                    <div class="d-none d-lg-inline-block">
+                        <span class="home-label-nc font-weight-bold ">Correlate</span>
+                    </div>
                 </a>
         
             </div>
