--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -344,7 +344,7 @@
         <!-- view selection buttons -->
         <div class="mt-3">
             <!-- Nav buttons -->
-            <div class="nav nav-pills bg-white device-xs border-bottom" role="tablist">
+            <div class="nav nav-pills bg-white device-xs " role="tablist">
         
                 <a class="nav-item nav-link border" id="tab-btn-table" href="#tab-table" data-toggle="pill"
                    aria-controls="tab-table" aria-selected="false" role="tab" style="text-decoration:none">
@@ -383,7 +383,7 @@
             
             
                 <!-- visualization elements -->
-                <div class="tab-content bg-white mb-2" id="tabs-01-content">
+                <div class="tab-content bg-white mb-2 border p-1" id="tabs-01-content">
             
 
                 <!-- TABLE TAB -->
