minor layout changes

--- a/themes/dohmh/layouts/data-explorer/single.html
+++ b/themes/dohmh/layouts/data-explorer/single.html
@@ -252,7 +252,7 @@
                         </button></li>
                 </ul>
             </nav>
-            <div class="float-right pr-4 d-sm-none d-lg-block">
+            <div class="float-right pr-4 d-sm-none d-md-block">
                 {{- partial "socialshare" . -}}
             </div>
             <h1 class="h2">{{ .Title }} </h1>
@@ -383,7 +383,7 @@
             
             
                 <!-- visualization elements -->
-                <div class="tab-content bg-white mb-2 border p-1" id="tabs-01-content">
+                <div class="tab-content bg-white mb-2 border-left border-right border-top p-1" id="tabs-01-content">
             
 
                 <!-- TABLE TAB -->
