--- a/themes/dohmh/layouts/index.html
+++ b/themes/dohmh/layouts/index.html
@@ -22,7 +22,7 @@
                   <li class="link-w-underline px-0"><a href={{ relURL "key-topics/pests" }}>Pests</a></li>
                 </ul>
               </div>
-              <div class="col-md-6 px-2 px-20">
+              <div class="col-md-6 px-20">
                 <ul class="list-unstyled font-weight-bold">
                   <li class="link-w-underline px-0"><a href={{ relURL "key-topics/transportation" }}>Public space</a></li>
                   <li class="link-w-underline px-0"><a href={{ relURL "key-topics/housing" }}>Housing</a></li>
