--- a/themes/dohmh/layouts/data-features/healthy-homes.html
+++ b/themes/dohmh/layouts/data-features/healthy-homes.html
@@ -280,7 +280,7 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body">
-            <h2 class="h4">Smoke or carbon monoxide detectors that don’t work, need new batteries, or are located too close to the kitchen.</h2>
+            <h2 class="h4">Smoke and carbon monoxide detectors that don’t work, need new batteries, or are located too close to the kitchen.</h2>
             <h3 class="h5">Why it's dangerous</h3>
             <p>Fire spreads fast and carbon monoxide (CO) is a colorless and odorless gas that can cause illness and sudden death.</p>
             <p>70% of fire deaths have occurred in homes where there were no working smoke or CO detectors.</p>
