--- a/themes/dohmh/layouts/data-stories/bbb.html
+++ b/themes/dohmh/layouts/data-stories/bbb.html
@@ -1,33 +1,8 @@
 {{- define "main" -}}
 
-<div class="container-fluid px-0">
-
-    {{ $src := .Resources.GetMatch .Params.image }}
-    {{ $image := $src.Resize "1920x"}}
-    <div id="datastoryheader" style="background-image: URL({{$image.RelPermalink}}); background-position: 50% 25%">
-
-        <div class="medium my-auto">
-            <h1 class="titleheader py-2 px-4">
-                {{ .Title }}
-            </h1>
-        </div>
-    </div>
-</div>
-
 <article class="container-fluid" id="skip-header-target">
 
-    <div class="row mt-2">
-        <div class="col-12">
-            <nav aria-label="breadcrumb" class="border-top">
-                <ul class="breadcrumb">
-                    <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
-                    <li class="breadcrumb-item"><a href={{ relURL "data-stories" }}>Data Stories</a></li>
-                    <li class="breadcrumb-item active"><a href="{{ .Page.RelPermalink }}">{{ .Title }}</a></li>
 
-                </ul>
-            </nav>
-        </div>
-    </div>
 
     <div class="row">
         <div class="col-xl-2"></div>
@@ -35,6 +10,19 @@
 
         <!--start main content section-->
         <div class="col-xl-8 overflow-hidden fs-rg" id="primary-content">
+
+        <div class="row mt-2">
+            <div class="col-12">
+                <nav aria-label="breadcrumb" class="border-top">
+                    <ul class="breadcrumb">
+                        <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
+                        <li class="breadcrumb-item"><a href={{ relURL "data-stories" }}>Data Stories</a></li>
+                        <li class="breadcrumb-item active"><a href="{{ .Page.RelPermalink }}">{{ .Title }}</a></li>
+    
+                    </ul>
+                </nav>
+            </div>
+        </div>
 
         <!-- language selection -->
         {{- if .IsTranslated -}}
@@ -49,6 +37,16 @@
         {{- end -}}
 
         <div class="narrow my-2">
+            <h1 class="h2 data-stories mb-3"><i class="fas fa-passport" aria-hidden="true" style="margin-right: 10px"></i>{{ .Title }}</h1>
+            <div class="container-fluid px-0">
+
+                {{ $src := .Resources.GetMatch .Params.image }}
+                {{ with $src }}
+                {{ $image := .Resize "1200x" }}
+                    <img class="block mb-3" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
+                {{ end }}
+            </div>
+            
                 {{- .Content -}}
 
                 <p>Legend:<br>
