--- a/themes/dohmh/layouts/data-stories/flexible.html
+++ b/themes/dohmh/layouts/data-stories/flexible.html
@@ -1,18 +1,5 @@
 {{- define "main" -}}
 
-<div class="container-fluid px-0">
-
-    {{ $src := .Resources.GetMatch .Params.image }}
-    {{ $image := $src.Resize "1920x"}}
-    <div id="datastoryheader" style="background-image: URL({{ $image.RelPermalink }}); background-position: 50% 25%">
-
-        <div class="medium my-auto">
-            <h1 class="titleheader py-2 px-4">
-                {{ .Title }}
-            </h1>
-        </div>
-    </div>
-</div>
 
 <!-- This flexible data story template puts content only within a row, and puts related content below -->
 
@@ -33,8 +20,8 @@
     {{- end -}}
     
     <div class="row">
-            <div class="col-12 mt-2">
-                <nav aria-label="breadcrumb" class="border-top">
+            <div class="col-12 my-2">
+                <nav aria-label="breadcrumb" class="">
                     <ul class="breadcrumb">
                         <li class="breadcrumb-item"><a href={{ relURL "" }}>Home</a></li>
                         <li class="breadcrumb-item"><a href={{ relURL "data-stories" }}>Data Stories</a></li>
@@ -44,7 +31,26 @@
                 </nav>
             </div>
 
-        {{- .Content -}}
+            <div class="col-xl-8 mx-auto">
+
+                <h1 class="h2 data-stories mb-3"><i class="fas fa-passport" aria-hidden="true" style="margin-right: 10px"></i>{{ .Title }}</h1>
+                <div class="">
+    
+                    {{ $src := .Resources.GetMatch .Params.image }}
+                    {{ with $src }}
+                    {{ $image := .Resize "1200x" }}
+                        <img class="block mb-3" src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}" alt="">
+                    {{ end }}
+                </div>
+            </div>
+
+
+            
+
+    </div>
+
+    <div class="row">
+        {{ .Content }}
     </div>
 
 </article>
